[package]
name = "cards"
version = "0.0.1"
authors = ["r1cm3d <ricardo.medeiros@pismo.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.0"
uuid = "0.4"
indoc = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

[dev-dependencies]
actix-rt = "1"
mockall = "0.9.1"
